# zk-bridge-demo

./: .gitignore
blogs/: draft.md  phase1-zkp-based-cross-chain-bridge.md
docs/: 01-跨链桥技术架构设计.md  02-超时回滚与故障恢复协议.md  03-SP1_zkVM原理与应用.md  04-ZK证明信任模型与安全性.md  05-跨链桥第二版整体设计.md  06-分阶段开发计划.md  07-Phase1.1完成总结.md  08-Phase1.2完成总结.md  09-Phase1.3完成总结.md  1-zkBridge论文解析.md  10-Sprint2-快速开始.md  10-超时回滚竞态条件分析.md  11-LayerZero和Wormhole竞态条件解决方案.md  12-取消超时退款机制的设计决策.md  13-跨链桥多签机制深度分析.md  14-Relayer竞争机制设计.md  15-Phase1.4开发计划.md  16-测试脚本使用说明.md  18-Phase2完成总结.md  19-Phase3开发进度.md  2-Virgo协议详解.md  20-剩余工作清单.md  21-Phase3.3完成总结.md  22-Phase3总进度.md  23-Phase3.3完成报告.md  24-zkBridge协议分析.md  25-协议优化方案.md  26-优化方案执行摘要.md  27-优先级调整后的设计方案.md  28-ZK约束深度对比.md  29-去中心化Relayer设计方案.md  3-为什么zkBridge需要收集多个块.md  4-zkBridge的持续追踪机制.md  5-Solana-ETH-Bridge项目设计.md  6-处理链重组和临时分叉.md  7-实现进度.md  8-详细开发计划.md  9-Sprint1-快速开始.md  9-Sprint5-ZK证明核心实现.md
evm-solana-bridge/: .gitignore  README.md  hardhat.config.js  package.json
evm-solana-bridge/contracts/: EVMSolanaBridge.sol  MockERC20.sol
solana-eth-bridge/: README.md  build-sp1-programs.sh  start-test-env.sh
solana-eth-bridge/ethereum/: package.json  (+4 more)
solana-eth-bridge/relayer/: Cargo.toml  build.rs  config.toml  test-integration.sh  test-relayer.sh
solana-eth-bridge/relayer/src/: ethereum_monitor.rs  main.rs  solana_monitor.rs
solana-eth-bridge/relayer/src/prover/: mod.rs  tests.rs  types.rs
solana-eth-bridge/sp1-programs/solana-verifier/: Cargo.toml
solana-eth-bridge/sp1-programs/solana-verifier/src/: main.rs
solana-evm-bridge/: Anchor.toml  package.json
(+32 files in other folders)
