[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.40", features = ["full"] }

# Solana 客户端
solana-client = "1.18"
solana-sdk = "1.18"

# HTTP 客户端（用于 Ethereum JSON-RPC）
reqwest = { version = "0.12", features = ["json"] }

# SP1 证明生成（暂时注释，Phase 2 再启用）
# sp1-sdk = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置管理
toml = "0.8"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"
