[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.40", features = ["full"] }

# Solana 客户端
solana-client = "2.0"
solana-sdk = "2.0"
bs58 = "0.5"

# HTTP 客户端（用于 Ethereum JSON-RPC）
reqwest = { version = "0.12", features = ["json"] }

# SP1 证明生成 ⚡
sp1-sdk = "2.0.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"

# 配置管理
toml = "0.8"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"
