[package]
name = "solana-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = "2.0.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
hex = "0.4"

[features]
default = []

[[bin]]
name = "solana-verifier"
path = "src/main.rs"

[profile.release]
opt-level = 3
